fixed media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,4 +293,9 @@ main {
   .flex-container {
     display: block;
   }
+
+  .flex-item {
+    min-height: 150px !important;
+    width: auto;
+  }
 }
